--- a/views/newflavorform.handlebars
+++ b/views/newflavorform.handlebars
@@ -14,5 +14,5 @@
    <label for="BrandId"> Brand Id:</label><br>
    <input type="number" id="BrandId" name="BrandId" min="1" required><br>
 
-   <button type="submit" class="btn btn-primary">Submit</button>
+   <button type="submit" class="btn btn-primary">Submittt</button>
 </form>
