--- a/public/style.css
+++ b/public/style.css
@@ -1,12 +1,40 @@
 
-body {
+/* body {
   background-color: thistle;  
-}
+} */
 
+#products {
+
+    font-family: monospace;
+    color: green;
+}
 h1, h2 {
   font-family: "Helvetica Neue", sans-serif;
   font-weight: 100;
 }
+
+#title {
+
+  margin-left: 300px;
+  font-family: "Lucida Handwriting";
+  font-size: 70px;
+  margin-top: 40px;
+  color: hotpink
+  }
+
+#producttitle
+{
+  margin-left: 350px;
+  font-size:45px;
+}
+
+/* body {
+  background-image: url("https://images.unsplash.com/photo-1602296751206-d611e4b4fe89?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTV8fGljZSUyMGNyZWFtJTIwYmFja2dyb3VuZHxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=600&q=60");
+  background-repeat: no-repeat;
+  background-size: auto;
+  background-size: cover;
+} */
+
 
 .block {
   width: 30vw;
@@ -43,4 +71,20 @@ h1, h2 {
 
 label, select {
   font-size: 1em;
+}
+
+footer {
+  position: relative;
+  margin-top: 30px;
+  padding: 30px;
+  background-color: #f1f1f7;
+  
+}
+
+.social-media > p > a {
+  color: black;
+}
+
+.useful-links > p > a {
+  color: black;
 }
