--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,11 +1,159 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <link rel="stylesheet" href="/style.css" />
-    </head>
-    <body>
-        <h1>Multicecream Site</h1>
-        {{{body}}}
-        <script src="/script.js"></script>
-    </body>
+
+<head>
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="/style.css" />
+
+    {{!-- ICON STYLESHEET --}}
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
+        integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+
+</head>
+
+<body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#"></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+            aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Our Story <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Menu</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Contact</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
+                        aria-haspopup="true" aria-expanded="false">
+                        DFW Locations
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                        <a class="dropdown-item" href="#">Southlake</a>
+                        <a class="dropdown-item" href="#">Grand Prairie</a>
+                        <a class="dropdown-item" href="#">Farmers Branch</a>
+                    </div>
+                </li>
+            </ul>
+        </div>
+    </nav>
+    <h1 id="title">Multicecream</h1>
+    <br>
+    <br>
+
+    {{!-- <div class="card" style="width: 18rem;">
+        <img class="card-img-top"
+            src="https://images.unsplash.com/photo-1579954115567-dff2eeb6fdeb?ixid=MnwxMjA3fDB8MHxzZWFyY2h8NTJ8fGljZSUyMGNyZWFtfGVufDB8fDB8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=600&q=60"
+            alt="Card image cap">
+        <div class="card-body">
+            <p class="card-text">{{{body}}}</p>
+        </div>
+    </div> --}}
+
+
+  
+    <div class="row">
+        <div class="col">
+            {{{body}}}
+        </div>
+    </div>
+
+
+    {{!-- START FOOTER ------------------------------------------------------------------------------------------}}
+    <footer class="">
+        <div class="footer-container">
+            {{!-- Section: Links --}}
+            <section>
+                {{!-- Grid row --}}
+                <div class="row">
+                    {{!-- Grid column --}}
+                    <div class="col-md-3">
+                        {{!-- Content --}}
+                        <h6>
+                            <i class="far fa-star"></i>MULTICECREAM
+                        </h6>
+                        <p>
+                            Changing the future of ice cream: We're building an outstanding alternative to current ice
+                            cream warehouse inventory systems.
+                        </p>
+                    </div>
+                    {{!-- Grid column --}}
+
+                    {{!-- Grid column --}}
+                    <div class="col-md-3 social-media">
+                        {{!-- Content --}}
+                        <h6>
+                            SOCIAL MEDIA
+                        </h6>
+                        <p>
+                            <a href="#" class="text-reset"><i class="fab fa-facebook-f"></i></a>
+                        </p>
+                        <p>
+                            <a href="#" class="text-reset"><i class="fab fa-twitter"></i></a>
+                        </p>
+                        <p>
+                            <a href="#" class="text-reset"><i class="fab fa-instagram"></i></a>
+                        </p>
+                        <p>
+                            <a href="#" class="text-reset"><i class="fab fa-google"></i></a>
+                        </p>
+                    </div>
+                    {{!-- Grid column --}}
+
+                    {{!-- Grid column --}}
+                    <div class="col-md-3 useful-links">
+                        {{!-- Content --}}
+                        <h6>
+                            USEFUL LINKS
+                        </h6>
+                        <p>
+                            <a href="#!" class="text-reset">Pricing</a>
+                        </p>
+                        <p>
+                            <a href="#!" class="text-reset">Settings</a>
+                        </p>
+                        <p>
+                            <a href="#!" class="text-reset">Orders</a>
+                        </p>
+                        <p>
+                            <a href="#!" class="text-reset">Help</a>
+                        </p>
+                    </div>
+                    {{!-- Grid column --}}
+
+                    {{!-- Grid column --}}
+                    <div class="col-md-3">
+                        {{!-- Content --}}
+                        <h6>
+                            CONTACT
+                        </h6>
+                        <p><i class="fas fa-home me-3"></i> Dallas, TX 70080, US</p>
+                        <p>
+                            <i class="fas fa-envelope me-3"></i>
+                            i.scream@foricecream.com
+                        </p>
+                        <p><i class="fas fa-phone me-3"></i> + 01 234 567 88</p>
+                        <p><i class="fas fa-print me-3"></i> + 01 234 567 89</p>
+                    </div>
+                    {{!-- Grid column --}}
+                </div>
+            </section>
+
+        </div>
+    </footer>
+    {{!-- END FOOTER ------------------------------------------------------------------------------------------}}
+
+    <script src="/script.js"></script>
+
+
+</body>
+
 </html>
