--- a/views/updateflavorform.handlebars
+++ b/views/updateflavorform.handlebars
@@ -15,6 +15,6 @@
    <label for="BrandId"> Brand Id:</label><br>
    <input type="number" id="BrandId" name="BrandId" min="1" value="{{flavor.BrandId}}" required><br>
    <br>
-   <button type="submit" class="btn btn-primary">Submit</button>
+   <button type="submit"id="btnn" class="btn">Submit</button>
    
 </form>
