--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    {{!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
             aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -44,8 +44,20 @@
                 </li>
             </ul>
         </div>
-    </nav>
-    <h1 id="title">Multicecream</h1>
+    </nav> --}}
+
+    <div class="bg-img">
+        <div class="container">
+            <div class="topnav">
+                <a href="/brands">Home</a>
+                <a href="#news">Flavor</a>
+                <a href="#contact">About</a>
+                <a href="#about">Contact</a>
+            </div>
+        </div>
+    </div>
+    {{!-- <h1 id="title">Multicecream</h1>
+    <img class="card-img-top" src="/source/logofinal.png" alt="Multicecream Logo"> --}}
     <br>
     <br>
 
@@ -59,7 +71,7 @@
     </div> --}}
 
 
-  
+
     <div class="row">
         <div class="col">
             {{{body}}}
