--- a/views/newflavorform.handlebars
+++ b/views/newflavorform.handlebars
@@ -14,6 +14,6 @@
    <label for="BrandId"> Brand Id:</label><br>
    <input type="number" id="BrandId" name="BrandId" min="1" required><br>
    <br>
-   <button type="submit" class="btn btn-primary">Submit</button>
+   <button type="submit" id="btnn" class="btn">Submit</button>
    
 </form>
