--- a/views/brand.handlebars
+++ b/views/brand.handlebars
@@ -1,59 +1,56 @@
-{{!-- <div class="big-block">
-	<h2 id="item-name">{{brand.name}}</h2>
-	<img class="item-img" src="{{brand.image}}" />
-	<button id="btn">Add Flavor!</button>
-</div> --}}
-
-<div>
-	{{!-- <a class="btn" href="/brands">Back to Brands List</a>x --}}
-	
-	{{!-- <form action="/brands" method="GET">
-		<button id="form" id="btnn" class="btn">Back to Brands List</button>
-	</form> --}}
-	
-	<form action="/new-flavor-form" method="GET">
-		<button   id="btnn" class="btn">Add Flavor</button>
-	</form>
-  
-
-	{{#each brand.Flavors}}
-	<article class="item-container block" style='text-align:center'>
-		<div id="card"  class="card" >
-				<div class="card-body">
-				
-				<img class="item-img" src="{{this.image}}" />
-		
-				<p><h2><b>{{this.name}}</b> </h2></p>
-				
-				<h3>Price: ${{this.price}} </h3>
-				<h3>In Stock: {{this.quantity}} </h3>
+{{!-- START NAVBAR --}}
+<div class="row">
+	<div class="col">
+		<div class="bg-img">
+			<div class="container">
+				<div class="topnav">
+					<a href="/brands">Home</a>
+					<a href="/login-form">Login</a>
+					<a href="/new-flavor-form">Add New Flavor</a>
+					<a href="#about">About</a>
+					<a href="#contact">Contact</a>
+				</div>
 			</div>
 		</div>
-
-		{{!-- delete button --}}
-
-		<form action="/delete/{{this.id}}" method="POST">
-			<button id="btnn"  class="btn">Delete</button>
-		</form>
-
-		{{!-- update button --}}
-
-		<form action="/update-flavor-form/{{this.id}}" method="GET">
-			<button id="btnn" class="btn">Update</button>
-		</form>
-
-
-	</article>
-	{{/each}}
-
-</div>
-
-{{!-- <div id="card" class="card">
-	<div class="card-body">
-		<h2 id="pnames">{{name}}</h2>
-		<img class="item-img" src="{{image}}" />
-		<a id="btnn" class="btn" href="/brands/{{id}}">View {{name}} Flavors</a>
 	</div>
-</div> --}}
+</div>
+{{!-- END NAVBAR --}}
 
+<div class="row">
+	<div class="col">
+		<section>
+			{{#each brand.Flavors}}
 
+			<article class="item-container block" style='text-align:center'>
+				<div id="card" class="card">
+					<div class="card-body">
+
+						<img class="item-img" src="{{this.image}}" />
+
+						<p>
+							<h2><b>{{this.name}}</b> </h2>
+						</p>
+
+						<h3>Price: ${{this.price}} </h3>
+
+					</div>
+				</div>
+
+				{{!-- delete button --}}
+
+				<form action="/delete/{{this.id}}" method="POST">
+					<button id="btnn" class="btn">Delete</button>
+				</form>
+
+				{{!-- update button --}}
+
+				<form action="/update-flavor-form/{{this.id}}" method="GET">
+					<button id="btnn" class="btn">Update</button>
+				</form>
+
+			</article>
+			{{/each}}
+
+		</section>
+	</div>
+</div>
