--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,73 +13,11 @@
 </head>
 
 <body>
-    {{!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#"></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
-            aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Our Story <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Menu</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Contact</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
-                        aria-haspopup="true" aria-expanded="false">
-                        DFW Locations
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="#">Southlake</a>
-                        <a class="dropdown-item" href="#">Grand Prairie</a>
-                        <a class="dropdown-item" href="#">Farmers Branch</a>
-                    </div>
-                </li>
-            </ul>
-        </div>
-    </nav> --}}
 
-    <div class="bg-img">
-        <div class="container">
-            <div class="topnav">
-                <a href="/brands">Home</a>
-                <a href="#news">Flavor</a>
-                <a href="#contact">About</a>
-                <a href="#about">Contact</a>
-            </div>
-        </div>
-    </div>
-    {{!-- <h1 id="title">Multicecream</h1>
-    <img class="card-img-top" src="/source/logofinal.png" alt="Multicecream Logo"> --}}
-    <br>
-    <br>
-
-    {{!-- <div class="card" style="width: 18rem;">
-        <img class="card-img-top"
-            src="https://images.unsplash.com/photo-1579954115567-dff2eeb6fdeb?ixid=MnwxMjA3fDB8MHxzZWFyY2h8NTJ8fGljZSUyMGNyZWFtfGVufDB8fDB8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=600&q=60"
-            alt="Card image cap">
-        <div class="card-body">
-            <p class="card-text">{{{body}}}</p>
-        </div>
-    </div> --}}
-
-
-
-    <div class="row">
-        <div class="col">
-            {{{body}}}
-        </div>
-    </div>
-
+    {{{body}}}
 
     {{!-- START FOOTER ------------------------------------------------------------------------------------------}}
-    <footer class="">
+    <footer class="footer">
         <div class="footer-container">
             {{!-- Section: Links --}}
             <section>
