--- a/views/shopbrand.handlebars
+++ b/views/shopbrand.handlebars
@@ -1,23 +1,48 @@
-<div>
-	<form action="/shop-brands" method="GET">
-		<button class="btn btn-success">Back to Brands List</button>
-	</form>
+{{!-- START NAVBAR --}}
+<div class="row">
+	<div class="col">
+		<div class="bg-img">
+			<div class="container">
+				<div class="topnav">
+					<a href="/shop-brands">Home</a>
+					<a href="/login-form">Login</a>
+					<a href="#about">About</a>
+					<a href="#contact">Contact</a>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+{{!-- END NAVBAR --}}
 
-	{{#each brand.Flavors}}
-	<article class="clearfix item-container block">
-		<h2>Flavor: {{this.name}}</h2>
-		<img class="item-img" src="{{this.image}}" />
-		<h3>Price: ${{this.price}} </h3>
-		<h3>In Stock: {{this.quantity}} </h3>
+<div class="row">
+	<div class="col">
+		<section>
+			{{#each brand.Flavors}}
+			<article class="item-container block" style='text-align:center'>
+				<div id="card" class="card">
+					<div class="card-body">
 
-		{{!-- add to cart button  --}}
+						<img class="item-img" src="{{this.image}}" />
 
-		{{!-- TODO: Write add to cart functionality --}}
-		<form action="/add-cart" method="POST">
-			<button class="btn btn-default">Add to Cart</button>
-		</form>
+						<p>
+							<h2><b>{{this.name}}</b> </h2>
+						</p>
 
-	</article>
-	{{/each}}
+						<h3>Price: ${{this.price}} </h3>
+						<h3>In Stock: {{this.quantity}} </h3>
+					</div>
+				</div>
 
+				{{!-- add to cart button --}}
+
+				{{!-- TODO: Write add to cart functionality --}}
+				<form action="/add-cart" method="POST">
+					<button id="btnn" class="btn">Add To Cart</button>
+				</form>
+
+			</article>
+			{{/each}}
+		</section>
+	</div>
 </div>
