--- a/views/updateflavorform.handlebars
+++ b/views/updateflavorform.handlebars
@@ -1,20 +1,42 @@
-{{!-- able to access flavor.id because passed {flavor} to updateflavorform --}}
-<form action="/update/{{flavor.id}}" method="post">
-   <label for="name">Flavor Name:</label><br>
-   <input type="text" id="name" name="name" value="{{flavor.name}}" required><br>
- 
-   <label for="image">Image URL:</label><br>
-   <input type="text" id="image" name="image" required>
-   <br>
-   <label for="quantity">Quantity:</label><br>
-   <input type="number" id="quantity" name="quantity" min="1" value="{{flavor.quantity}}" required><br>
+{{!-- START NAVBAR --}}
+<div class="row">
+   <div class="col">
+      <div class="bg-img">
+         <div class="container">
+            <div class="topnav">
+               <a href="/brands">Home</a>
+               <a href="/login-form">Login</a>
+               <a href="/new-flavor-form">Add New Flavor</a>
+               <a href="#about">About</a>
+               <a href="#contact">Contact</a>
+            </div>
+         </div>
+      </div>
+   </div>
+</div>
+{{!-- END NAVBAR --}}
 
-   <label for="name">Price:</label><br>
-   <input type="number" id="price" name="price" min="1" step="any" value="{{flavor.price}}" required><br>
+<div class="row">
+   <div class="col">
+      {{!-- able to access flavor.id because passed {flavor} to updateflavorform --}}
+      <form action="/update/{{flavor.id}}" method="post">
+         <label for="name">Flavor Name:</label><br>
+         <input type="text" id="name" name="name" value="{{flavor.name}}" required><br>
 
-   <label for="BrandId"> Brand Id:</label><br>
-   <input type="number" id="BrandId" name="BrandId" min="1" value="{{flavor.BrandId}}" required><br>
-   <br>
-   <button type="submit"id="btnn" class="btn">Submit</button>
-   
-</form>
+         <label for="image">Image URL:</label><br>
+         <input type="text" id="image" name="image" required>
+         <br>
+         <label for="quantity">Quantity:</label><br>
+         <input type="number" id="quantity" name="quantity" min="1" value="{{flavor.quantity}}" required><br>
+
+         <label for="name">Price:</label><br>
+         <input type="number" id="price" name="price" min="1" step="any" value="{{flavor.price}}" required><br>
+
+         <label for="BrandId"> Brand Id:</label><br>
+         <input type="number" id="BrandId" name="BrandId" min="1" value="{{flavor.BrandId}}" required><br>
+         <br>
+         <button type="submit" id="btnn" class="btn">Submit</button>
+
+      </form>
+   </div>
+</div>
