add dropdown to add-flavor form

--- a/views/newflavorform.handlebars
+++ b/views/newflavorform.handlebars
@@ -30,12 +30,20 @@
 
          <label for="name">Price:</label><br>
          <input type="number" id="price" name="price" min="1" step="any" required><br>
-
-         <label for="BrandId"> Brand Id:</label><br>
-         <input type="number" id="BrandId" name="BrandId" min="1" required><br>
+         <label for="BrandId">Choose a brand:</label><br>
+         <select id="BrandId" name="BrandId">
+            <option value="1">Haagen-Dazs</option>
+            <option value="2">Ben & Jerry's</option>
+            <option value="3">Magnum</option>
+            <option value="4">Blue Bell</option>
+            <option value="5">Dairy Queen</option>
+            <option value="6">Baskin-Robbins</option>
+         </select>
          <br>
          <button type="submit" id="btnn" class="btn">Submit</button>
-
-      </form>
    </div>
+
+
+   </form>
+</div>
 </div>
