--- a/views/brand.handlebars
+++ b/views/brand.handlebars
@@ -5,7 +5,7 @@
 			<div class="container">
 				<div class="topnav">
 					<a href="/brands">Home</a>
-					<a href="/login-form">Login</a>
+					{{!-- <a href="/login-form">Login</a> --}}
 					<a href="/new-flavor-form">Add New Flavor</a>
 					<a href="#about">About</a>
 					<a href="#contact">Contact</a>
