--- a/views/brands.handlebars
+++ b/views/brands.handlebars
@@ -5,7 +5,7 @@
 			<div class="container">
 				<div class="topnav">
 					<a href="/brands">Home</a>
-					<a href="/login-form">Login</a>
+					{{!-- <a href="/login-form">Login</a> --}}
 					<a href="/new-flavor-form">Add New Flavor</a>
 					<a href="#about">About</a>
 					<a href="#contact">Contact</a>
@@ -19,6 +19,7 @@
 <div class="row">
 	<div class="col">
 		<section>
+			<br>
 			<h2 id="ptitle"> Our Top Quality Ice Cream Brands</h2>
 			<br>
 			{{#each brands}}
