--- a/views/shopbrand.handlebars
+++ b/views/shopbrand.handlebars
@@ -5,9 +5,12 @@
 			<div class="container">
 				<div class="topnav">
 					<a href="/shop-brands">Home</a>
-					<a href="/login-form">Login</a>
+					{{!-- <a href="/login-form">Login</a> --}}
 					<a href="#about">About</a>
 					<a href="#contact">Contact</a>
+					<a href="#contact">Cart  <span class="badge badge-light">0</span>
+</a>
+					
 				</div>
 			</div>
 		</div>
@@ -37,7 +40,8 @@
 
 				{{!-- TODO: Write add to cart functionality --}}
 				<form action="/add-cart" method="POST">
-					<button id="btnn" class="btn">Add To Cart</button>
+					<button id="btnn" class="btn">Add To Cart <i class="fas fa-cart-plus"></i>	</button>
+				
 				</form>
 
 			</article>
