--- a/views/shopbrands.handlebars
+++ b/views/shopbrands.handlebars
@@ -5,9 +5,11 @@
 			<div class="container">
 				<div class="topnav">
 					<a href="/shop-brands">Home</a>
-					<a href="/login-form">Login</a>
+					{{!-- <a href="/login-form">Login</a> --}}
 					<a href="#about">About</a>
 					<a href="#contact">Contact</a>
+					<a href="#contact">Cart  <span class="badge badge-light">0</span>
+</a>
 				</div>
 			</div>
 		</div>
@@ -18,7 +20,9 @@
 <div class="row">
 	<div class="col">
 		<section>
-			<h2 id="ptitle"> Our Top Quality Ice Cream Brands</h2>
+			<br>
+			<h2 id="ptitle"> Make a selection from our Top Quality Ice Cream Brands</h2>
+			
 			<br>
 			{{#each brands}}
 			<article class="item-container block" style='text-align:center'>
