add dropdown to update form, add to cart badge, redirect after update

--- a/views/newflavorform.handlebars
+++ b/views/newflavorform.handlebars
@@ -30,6 +30,7 @@
 
          <label for="name">Price:</label><br>
          <input type="number" id="price" name="price" min="1" step="any" required><br>
+
          <label for="BrandId">Choose a brand:</label><br>
          <select id="BrandId" name="BrandId">
             <option value="1">Haagen-Dazs</option>
@@ -40,7 +41,7 @@
             <option value="6">Baskin-Robbins</option>
          </select>
          <br>
-         <button type="submit" id="btnn" class="btn">Submit</button>
+         <button type="submit" class="btn">Submit</button>
    </div>
 
 
